- layout fixes - fixed issue for box-shadow not working on ios

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
   padding: 20px;
 }
 
+.headerSection h2 {
+  margin: 0;
+}
+
 .mainSection {
   padding: 10px;
   overflow-x: hidden;
@@ -50,7 +54,9 @@
 
 .searchField {
   width: 100%;
-  box-shadow: 0px 3px 6px 0px rgb(0 0 0 / 10%), 0px 1px 3px 0px rgb(0 0 0 / 8%);
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.1), 0px 1px 3px 0px rgba(0,0,0,0.08);
+  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.1), 0px 1px 3px 0px rgba(0,0,0,0.08);
   font-size: 16px;
     line-height: 22px;
     padding: 20px;
